# game-of-life

./: .clangd  CMakeLists.txt  README.md  main.cpp
utils/: .clangd  CMakeLists.txt  constants.hpp  grid.cpp  grid.hpp
